fix spacing on confirm modal

--- a/src/blocks/ModalWithForm.css
+++ b/src/blocks/ModalWithForm.css
@@ -166,6 +166,8 @@
 .modal__buttons-confirm {
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
+  gap: 24px;
 }
 
 .modal__confirm-content {
@@ -174,6 +176,7 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+  margin-bottom: 24px;
 }
 
 .modal__text-confirm {
